[package]
name                  = "pacquet-micro-benchmark"
version               = "0.0.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "micro-benchmark"
path = "src/main.rs"

[dependencies]
pacquet-registry  = { workspace = true }
pacquet-network   = { workspace = true }
pacquet-store-dir = { workspace = true }
pacquet-tarball   = { workspace = true }
pacquet-fs        = { workspace = true }

clap         = { workspace = true }
criterion    = { workspace = true }
futures-util = { workspace = true }
mockito      = { workspace = true }
num_cpus     = { workspace = true }
rayon        = { workspace = true }
sha2         = { workspace = true }
tar          = { workspace = true }
tokio        = { workspace = true }
tempfile     = { workspace = true }
pipe-trait   = { workspace = true }
project-root = { workspace = true }
ssri         = { workspace = true }
node-semver  = { workspace = true }
zune-inflate = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"
monoio      = "0.2"
